# qwen-tts-cloner

./: .gitignore  README.md  piper_train_colab.ipynb  qwen_tts_dataset_generator.ipynb  sentences.txt  transcript.txt
labs/: clone_voice.py  pyproject.toml
